Added initially loading message before vue component is mounted

--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
 
 <body>
 
+<div class="ui active dimmer" id="placeholder">
+	<div class="ui massive indeterminate text loader">Loading...</div>
+</div>
+
 <div id='interface'>
   	<component :is="view" ></component>
 </div>
