--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
 			left: 175px;
 		}
 		#board {
-			top: 50px;
+			top: 20px;
 			left: 320px;
 			position: fixed;
-			height: 500px;
-			width: 750px;
+			height: 620px;
+			width: 930px;
 			display: grid;
-			grid-template-columns: 750px;
-  			grid-template-rows: 500px;
+			/*grid-template-columns: 750px;*/
+			grid-template-columns: 930px;
+  			/*grid-template-rows: 500px;*/
+  			grid-template-rows: 620px;
   			background-color: black;
 			overflow: hidden;
 		}
@@ -49,8 +51,8 @@
 		}
 		.shape {
 			position: fixed;
-			width: 40px;
-			height: 40px;
+			width: 50px;
+			height: 50px;
 			background-size: contain;
 			/*border: 1px solid red;*/
 		}
